# norchid

./: .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  jobs.py  main.py
docs/: ARCHITECTURE.md  BRANDING.md  DECISIONS.md  PRD.md  ROADMAP.md
pipeline/: artwork.py  ass_render.py  download.py  lyrics.py  runner.py  separate.py  thumbnail.py  video.py
scripts/: phase0_spike.py  preview_browsertest.py  preview_compare.py  preview_fullflow.py  preview_glyphcmp.py  preview_realtest.py
web/: app.css  index.html
